= MagLev Change Log

  For more details see: http://bit.ly/d3C6S1

== Unreleased Changes

== Changes for 25439 2011-03-11
* Got Seaside loading correctly again
* Fix performance regression caused by fix of Trac 874
* Make RUBY_PLATFORM a transient constant.
* Add an include/st.h which just defines the enum st_retval .
* Implement initialize_on_load for FFI libraries, to fix Trac 800.
* Fix Trac 874 in Regexp primitives.
* Updated WebTools example to include browsing Ruby code, and graphing statmon data
* More bugfixes and improvements to the underlying GemStone 3.0 system

== Changes for 25393 2011-03-08
* Implement rb_hash_foreach for C extensions.
* Fix  Object#dup to call allocate , required for C extensions.
* Fix Trac 871
* Updated script to load Seaside
* A few bugfixes to underlying GemStone 3.0 system

== Changes for 25375 2011-03-04
* Update to Bundler 1.0.10
* Update to RubyGems 1.6.0
* Change a few inline functions in ruby.h to MRI compatible macros.
* Changes to make RDiscount work, make IO Enumerable
* Fix Trac 861 & 869
* Update docs/ruby_and_smalltalk
* Fix compile flags in rbconfig for MacOSX
* A couple of bugfixes to underlying GemStone 3.0 system
* Quite a few changes to .gs files in the GemStone 3.0 image directory

== Changes for 25343 2011-02-26
* Fix Trac 866, IO.popen
* Fix Trac 829 in the implementation of eval
* Fix some spec regressions in eval after fix of Trac 829
* Include Tim's updates to mkmf and rbconfig
* Started new document on Ruby <-> Smalltalk interoperability
* A handful of bugfixes to underlying GemStone 3.0 system
* Fix lint problems found by latest GCC

== Changes for 25329 2011-02-24
* Changes to rbconfig.rb and mkmf.rb to support C extensions
* A handful of bugfixes to underlying GemStone 3.0 system

== Changes for 25315 2011-02-23
* Fix Trac 857, 860, 862.
* Implement rb_str_buf_new - note comments in ruby.h
* More details in lib/ruby/1.8/include/Maglev_c_extensions.txt
* Fixes to rbconfig.rb neeeded for mkmf